Add generate token with RSA algorithm

--- a/GenerateRSAKeys/pom.xml
+++ b/GenerateRSAKeys/pom.xml
@@ -25,5 +25,10 @@
             <artifactId>java-jwt</artifactId>
             <version>4.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcpkix-jdk15on</artifactId>
+            <version>1.64</version>
+        </dependency>
     </dependencies>
 </project>
